# sudoku_app

./: pom.xml
src/backend/: backend.sln
src/backend/SudokuSolverLogic/: SudokuSolverLogic.vcxproj  SudokuSolverLogic.vcxproj.filters  source.cpp
src/backend/SudokuSolverLogic/x64/Debug/: SudokuSolverLogic.exe.recipe  SudokuSolverLogic.ilk  vc143.idb
src/backend/SudokuSolverLogic/x64/Debug/SudokuSo.dd456b87.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/backend/src/: backend.h  backend.i  src.vcxitems
src/backend/sudoku_backend/: CMakeCache.txt  CMakeLists.txt  Makefile  backend.cpp  backend.h  backend_wrap.cpp  build.sh  cmake_install.cmake  generatorLib.h  sudoku_backend.vcxproj  sudoku_backend.vcxproj.filters  tdoku.h
src/backend/sudoku_backend/x64/Debug/: sudoku_backend.dll.recipe  sudoku_backend.ilk  vc143.idb
src/backend/sudoku_backend/x64/Debug/sudoku_backend.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sudoku_backend.lastbuildstate  sudoku_backend.write.1u.tlog
src/backend/tdoku-master/: .gitignore  BUILD.sh  CMakeLists.txt  all.sh  build.sh  lel.exe.stackdump
src/backend/tdoku-master/src/: generate.cc  generatelol.cpp  generatorLib.cc  generatorLib.h  grid_lib.cc  grid_tools.cc  solver_dpll_triad_scc.cc
src/backend/tdoku-master/test/: test_puzzles
src/backend/tester/: tester.cpp  tester.vcxproj
src/backend/x64/Debug/: sudoku_backend.exp  sudoku_backend.lib
src/frontend/java/: module-info.java
(+13 files in other folders)
